--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,17 @@
 plugins {
     id 'application'
-    id 'org.graalvm.buildtools.native' version '0.10.2'
+    id 'org.graalvm.buildtools.native' version '0.10.4'
     id 'com.google.osdetector' version '1.7.3'
 }
 
 tasks.wrapper {
-    gradleVersion = '8.9'
+    gradleVersion = '8.12'
     distributionType = Wrapper.DistributionType.ALL
 }
 
 group = 'org.lwjgl'
 description = 'LWJGL3 demos with native image by GraalVM'
-version = '3.3.4'
+version = '3.3.6'
 
 //returns the <os>-<arch> platform string suitable for retrieval of LWJGL natives
 //(if <arch> is blank, it implies "x86_64")
@@ -37,9 +37,8 @@ def getCurrentPlatform() {
 
 ext {
     lwjglVersion = project.version
-    jomlVersion = '1.10.6-SNAPSHOT'
-    swtMavenVersion = '3.126.0'  //contains Eclipse SWT 4.9.6.5 software
-    swtP2Version = '3.126.0.v20240528-0813'  //contains Eclipse SWT 4.9.6.5 software
+    jomlVersion = '1.10.8'
+    swtMavenVersion = '3.128.0'  //contains Eclipse SWT 4.9.6.7 software
 
     //LWJGL modules used: minimal OpenGL, plus bgfx, cuda, jemalloc, par, shaderc, vma, vulkan
     lwjglModules = [
@@ -57,13 +56,9 @@ ext {
 repositories {
     mavenCentral()
     maven {
-        url "https://oss.sonatype.org/content/repositories/snapshots"
+        url = "https://oss.sonatype.org/content/repositories/snapshots"
     }
     mavenLocal()
-    //p2 repository for Maven projects, for the SWT library for Windows on Arm64
-    maven {
-        url "https://p2repository.com/mvn3/eclipse-2024-06/"
-    }
 }
 
 dependencies {
@@ -98,9 +93,9 @@ dependencies {
             }
             break
         case 'windows-arm64':
-            //No SWT library for Windows on Arm64 is yet available in Maven Central;
-            //temporarily use a P2 SWT library for Windows on Arm64:
-            implementation "org.eclipse.ide:org.eclipse.swt.win32.win32.aarch64:$swtP2Version"
+            implementation("org.eclipse.platform:org.eclipse.swt.win32.win32.aarch64:$swtMavenVersion") {
+                exclude group: 'org.eclipse.platform', module: 'org.eclipse.swt'
+            }
             break
         default:
             throw new GradleException('Unknown platform for SWT: ' + currentPlatform)
@@ -211,7 +206,7 @@ task uberJar(type: Jar) {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
     exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
-    duplicatesStrategy 'exclude'
+    duplicatesStrategy = 'exclude'
 }
 
 graalvmNative {
