--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,17 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.lwjgl</groupId>
     <artifactId>lwjgl3-demos</artifactId>
-    <version>3.3.4</version>
+    <version>3.3.6</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.release>11</maven.compiler.release>
-        <maven.compiler.plugin.version>3.12.1</maven.compiler.plugin.version>
-        <maven.shade.plugin.version>3.5.2</maven.shade.plugin.version>
+        <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
+        <maven.shade.plugin.version>3.6.0</maven.shade.plugin.version>
         <lwjgl.version>${project.version}</lwjgl.version>
-        <swt.maven.version>3.126.0</swt.maven.version> <!-- contains Eclipse SWT 4.9.6.5 software -->
-        <swt.p2.version>3.126.0.v20240528-0813</swt.p2.version> <!-- contains Eclipse SWT 4.9.6.5 software -->
-        <joml.version>1.10.6-SNAPSHOT</joml.version>
-        <native.maven.plugin.version>0.10.2</native.maven.plugin.version>
+        <swt.maven.version>3.128.0</swt.maven.version> <!-- contains Eclipse SWT 4.9.6.7 software -->
+        <joml.version>1.10.8</joml.version>
+        <native.maven.plugin.version>0.10.4</native.maven.plugin.version>
         <exec.mainClass>org.lwjgl.demo.DemoLauncher</exec.mainClass>
         <!-- default exec application is the demo launcher, but specific demo class
              can be launched directly via the following property during mvn invoke.
@@ -76,14 +75,17 @@
                 <platform>windows-arm64</platform>
             </properties>
             <dependencies>
-                <!-- No SWT library for Windows on Arm64 is yet available in Maven Central;
-                     temporarily use a P2 SWT library for Windows on Arm64 -->
                 <dependency>
-                    <groupId>org.eclipse.ide</groupId>
+                    <groupId>org.eclipse.platform</groupId>
                     <artifactId>org.eclipse.swt.win32.win32.aarch64</artifactId>
-                    <version>${swt.p2.version}</version>
+                    <version>${swt.maven.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>org.eclipse.platform</groupId>
+                            <artifactId>org.eclipse.swt</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
-
                 <!-- No BGFX native library is yet available for Windows on ARM64;
                      temporarily use the x64 native library, at least for required native loading
                      at runtime (but BGFX demos won't work though) -->
@@ -245,7 +247,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>3.2.0</version>
+                <version>3.5.0</version>
                 <executions>
                     <execution>
                         <goals>
@@ -264,7 +266,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.6.0</version>
+                <version>3.8.1</version>
                 <executions>
                     <execution>
                         <id>unpack</id>
@@ -413,11 +415,6 @@
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
-        </repository>
-        <!-- p2 repository for Maven projects, for the SWT library for Windows on Arm64 -->
-        <repository>
-            <id>eclipse-2024-06</id>
-            <url>https://p2repository.com/mvn3/eclipse-2024-06/</url>
         </repository>
     </repositories>
 
